Bindings/Ogre/hBuild/HGamer3D/Bindings/Ogre/ClassSceneManager.chs

{-# LANGUAGE ForeignFunctionInterface #-}
{-# LANGUAGE TypeSynonymInstances #-}

-- This source file is part of HGamer3D, a project to enable 3D game development 
-- in Haskell. For the latest info, see http://www.hgamer3d.org .
-- 

-- (c) 2011-2014 Peter Althainz
-- 
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
-- 
--     http://www.apache.org/licenses/LICENSE-2.0
-- 
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.
-- 


-- ClassSceneManager.chs

-- 

module HGamer3D.Bindings.Ogre.ClassSceneManager where

import Foreign
import Foreign.Ptr
import Foreign.C

import HGamer3D.Data.HG3DClass
import HGamer3D.Data.Vector
import HGamer3D.Data.Colour
import HGamer3D.Data.Angle

{# import HGamer3D.Bindings.Ogre.Utils #}
{# import HGamer3D.Bindings.Ogre.ClassPtr #}
{# import HGamer3D.Bindings.Ogre.StructHG3DClass #}
{# import HGamer3D.Bindings.Ogre.StructSharedPtr #}
{# import HGamer3D.Bindings.Ogre.EnumSceneManagerPrefabType #}
{# import HGamer3D.Bindings.Ogre.StructColour #}
{# import HGamer3D.Bindings.Ogre.StructQuaternion #}
{# import HGamer3D.Bindings.Ogre.EnumSceneManagerSpecialCaseRenderQueueMode #}
{# import HGamer3D.Bindings.Ogre.EnumLightType #}

#include "ClassSceneManager.h"
{- function ~SceneManager -}
{#fun ogre_scmgr_destruct as delete 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function getName -}
{#fun ogre_scmgr_getName as getName 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function getTypeName -}
{#fun ogre_scmgr_getTypeName as getTypeName 
{ withHG3DClass* `HG3DClass' ,
 alloc64k- `String' peekCString*} -> `()'  #}

{- function createCamera -}
{#fun ogre_scmgr_createCamera as createCamera 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getCamera -}
{#fun ogre_scmgr_getCamera as getCamera 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasCamera -}
{#fun ogre_scmgr_hasCamera as hasCamera 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyCamera -}
{#fun ogre_scmgr_destroyCamera as destroyCamera 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroyCamera2 -}
{#fun ogre_scmgr_destroyCamera2 as destroyCamera2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllCameras -}
{#fun ogre_scmgr_destroyAllCameras as destroyAllCameras 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function createLight -}
{#fun ogre_scmgr_createLight as createLight 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createLight2 -}
{#fun ogre_scmgr_createLight2 as createLight2 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getLight -}
{#fun ogre_scmgr_getLight as getLight 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasLight -}
{#fun ogre_scmgr_hasLight as hasLight 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyLight -}
{#fun ogre_scmgr_destroyLight as destroyLight 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyLight2 -}
{#fun ogre_scmgr_destroyLight2 as destroyLight2 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroyAllLights -}
{#fun ogre_scmgr_destroyAllLights as destroyAllLights 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function createSceneNode -}
{#fun ogre_scmgr_createSceneNode as createSceneNode 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createSceneNode2 -}
{#fun ogre_scmgr_createSceneNode2 as createSceneNode2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function destroySceneNode -}
{#fun ogre_scmgr_destroySceneNode as destroySceneNode 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroySceneNode2 -}
{#fun ogre_scmgr_destroySceneNode2 as destroySceneNode2 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function getRootSceneNode -}
{#fun ogre_scmgr_getRootSceneNode as getRootSceneNode 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getSceneNode -}
{#fun ogre_scmgr_getSceneNode as getSceneNode 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasSceneNode -}
{#fun ogre_scmgr_hasSceneNode as hasSceneNode 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function createEntity -}
{#fun ogre_scmgr_createEntity as createEntity 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 withCString* `String' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createEntity2 -}
{#fun ogre_scmgr_createEntity2 as createEntity2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 withSharedPtr* `SharedPtr' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createEntity3 -}
{#fun ogre_scmgr_createEntity3 as createEntity3 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createEntity4 -}
{#fun ogre_scmgr_createEntity4 as createEntity4 
{ withHG3DClass* `HG3DClass' ,
 withSharedPtr* `SharedPtr' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createEntity5 -}
{#fun ogre_scmgr_createEntity5 as createEntity5 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 cIntFromEnum `EnumSceneManagerPrefabType' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createEntity6 -}
{#fun ogre_scmgr_createEntity6 as createEntity6 
{ withHG3DClass* `HG3DClass' ,
 cIntFromEnum `EnumSceneManagerPrefabType' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getEntity -}
{#fun ogre_scmgr_getEntity as getEntity 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasEntity -}
{#fun ogre_scmgr_hasEntity as hasEntity 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyEntity -}
{#fun ogre_scmgr_destroyEntity as destroyEntity 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroyEntity2 -}
{#fun ogre_scmgr_destroyEntity2 as destroyEntity2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllEntities -}
{#fun ogre_scmgr_destroyAllEntities as destroyAllEntities 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function createManualObject -}
{#fun ogre_scmgr_createManualObject as createManualObject 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createManualObject2 -}
{#fun ogre_scmgr_createManualObject2 as createManualObject2 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getManualObject -}
{#fun ogre_scmgr_getManualObject as getManualObject 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasManualObject -}
{#fun ogre_scmgr_hasManualObject as hasManualObject 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyManualObject -}
{#fun ogre_scmgr_destroyManualObject as destroyManualObject 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroyManualObject2 -}
{#fun ogre_scmgr_destroyManualObject2 as destroyManualObject2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllManualObjects -}
{#fun ogre_scmgr_destroyAllManualObjects as destroyAllManualObjects 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function createBillboardChain -}
{#fun ogre_scmgr_createBillboardChain as createBillboardChain 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function createBillboardChain2 -}
{#fun ogre_scmgr_createBillboardChain2 as createBillboardChain2 
{ withHG3DClass* `HG3DClass' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function getBillboardChain -}
{#fun ogre_scmgr_getBillboardChain as getBillboardChain 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `HG3DClass' peek*} -> `()'  #}

{- function hasBillboardChain -}
{#fun ogre_scmgr_hasBillboardChain as hasBillboardChain 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyBillboardChain -}
{#fun ogre_scmgr_destroyBillboardChain as destroyBillboardChain 
{ withHG3DClass* `HG3DClass' ,
 withHG3DClass* `HG3DClass' } -> `()'  #}

{- function destroyBillboardChain2 -}
{#fun ogre_scmgr_destroyBillboardChain2 as destroyBillboardChain2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllBillboardChains -}
{#fun ogre_scmgr_destroyAllBillboardChains as destroyAllBillboardChains 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function hasRibbonTrail -}
{#fun ogre_scmgr_hasRibbonTrail as hasRibbonTrail 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyRibbonTrail2 -}
{#fun ogre_scmgr_destroyRibbonTrail2 as destroyRibbonTrail2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllRibbonTrails -}
{#fun ogre_scmgr_destroyAllRibbonTrails as destroyAllRibbonTrails 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function hasParticleSystem -}
{#fun ogre_scmgr_hasParticleSystem as hasParticleSystem 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function destroyParticleSystem2 -}
{#fun ogre_scmgr_destroyParticleSystem2 as destroyParticleSystem2 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function destroyAllParticleSystems -}
{#fun ogre_scmgr_destroyAllParticleSystems as destroyAllParticleSystems 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function clearScene -}
{#fun ogre_scmgr_clearScene as clearScene 
{ withHG3DClass* `HG3DClass' } -> `()'  #}

{- function setAmbientLight -}
{#fun ogre_scmgr_setAmbientLight as setAmbientLight 
{ withHG3DClass* `HG3DClass' ,
 withColour* `Colour' } -> `()'  #}

{- function getAmbientLight -}
{#fun ogre_scmgr_getAmbientLight as getAmbientLight 
{ withHG3DClass* `HG3DClass' ,
 alloca- `Colour' peekColour*} -> `()'  #}

{- function prepareWorldGeometry -}
{#fun ogre_scmgr_prepareWorldGeometry as prepareWorldGeometry 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function setWorldGeometry -}
{#fun ogre_scmgr_setWorldGeometry as setWorldGeometry 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' } -> `()'  #}

{- function estimateWorldGeometry -}
{#fun ogre_scmgr_estimateWorldGeometry as estimateWorldGeometry 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Int' peekIntConv*} -> `()'  #}

{- function hasOption -}
{#fun ogre_scmgr_hasOption as hasOption 
{ withHG3DClass* `HG3DClass' ,
 withCString* `String' ,
 alloca- `Bool' peekBoolUtil*} -> `()'  #}

{- function setSkyPlaneEnabled -}
{#fun ogre_scmgr_setSkyPlaneEnabled as setSkyPlaneEnabled 
{ withHG3DClass* `HG3DClass' ,
 fromBool `Bool' } -> `()'  #}
